# cargo-slicer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.demo.md  README.md  book.toml  build-accelerate.sh  cargo-slicer.ps1  cargo-slicer.sh  demo-wsl.sh  demo.cast  install-script.sh  install.ps1  install.sh  multicrate-report.html  perf-report.html
.github/workflows/: mdbook.yml  release-nightly-drivers.yml  release.yml
benches/: slicer_benchmarks.rs
book/src/: SUMMARY.md  all-in-one.md  ase2026-corpus.md  benchmarks.md  env-vars.md  getting-started.md  how-it-works.md  introduction.md  rl-bench.md  sound-prune.md  troubleshooting.md  usage.md  virtual-slicer.md  warm-cache.md
book/src/blog/: index.md  part1.md  part2.md  part3.md
docs/: DESIGN.md  HISTORY.md  USAGE.md  amanieu-review-feedback.md  ase2026-corpus.csv  blog-part1-en.md  blog-part1-zh.md  blog-part2-en.md  blog-part2-zh.md  blog-part3-en.md  blog-part3-zh.md  cargo_slicer.md  crate_slicing_log.md  crate_slicing_workflow.md  lcnr-review-feedback.md  oli-mcp-blog-draft.md  oli-mcp-design.md  oli-mcp-mp-postmortem.md  oli-mcp-timings.md  reachability-analysis-comparison.md  symbol_resolution_architecture.md  unstable-book-dead-fn-elimination.md  upstream-rfc.md  vadim-petrochenkov-review-feedback.md  vadim-response-action-plan.md  vadim-response-results.md  wesley-workingjubilee-review-feedback.md
docs/assets/oli-mcp-timings/: ripgrep-baseline.html  ripgrep-vslice-cc.html
scripts/: build-release.sh  ci_bench_multicrate.sh  ci_bench_rustc_perf.sh
src/: analyze_errors.rs  arch.rs  auto_fix.rs  build_handler.rs  cargo_toml.rs  cfg.rs  check_all_crates.rs  check_slicer.rs  codegen.rs  constants.rs  crate_info.rs  cross_crate_bfs.rs  ctags_collector.rs  ctags_ffi.rs  cycle_breaker.rs  cycle_detector.rs  debug_log.rs  dep_analyzer.rs  dep_graph.rs  deploy_slicer.rs  lib.rs  local_registry.rs  main.rs  measure.rs  parsing.rs  pre_analyze.rs  process_ext.rs  profiling.rs  pu_type.h  ra_deps.rs  rustc_subprocess.rs  semantic.rs  slice_all.rs  slicing.rs  source_fix.rs  symbol.rs  types.rs  unparse.rs  usage.rs  variant_generator.rs  (+2 more)
src/common/: arch.rs  ast_parser.rs  cfg_eval.rs  file_ops.rs  graph.rs  item_visitor.rs  mod.rs  source_location.rs
src/ctags/: args.h  config.h  ctags_amalg.c  debug.h  entry.h  general.h  get.h  keyword.h  main.h  options.h  parse.h  parsers.h  precc_ffi.h  read.h  routines.h  rust.c  strlist.h  vstring.h
src/ctags_rs/: mod.rs  rust_parser.rs
src/old_slicer/: auto_fix.rs  codegen.rs  dependency_decision_log.rs  import_analyzer.rs  import_decision_log.rs  imports.rs  mod.rs  parsing.rs  post_slice_fixer.rs  semantic.rs  slicing.rs  source_fix.rs  symbol.rs
src/rustc_integration/: ast_visitor.rs  debug_log.rs  hir_visitor.rs  mir_harvester.rs  mod.rs  slicer_integration.rs  usage_collector.rs  virtual_slicer.rs
src/slicer/: ast_cache.rs  cache.rs  cleanup.rs  config.rs  copy.rs  ctags_parser.rs  deleter.rs  dependency_graph.rs  fast_tokenizer.rs  features.rs  incremental_graph.rs  marker.rs  mod.rs  project_slicer.rs  root_set.rs  text_deleter.rs  text_dependencies.rs  text_extractor.rs  trial_deleter.rs
src/slicer/rules/: direct_usage.rs  generic_bounds.rs  impl_blocks.rs  mod.rs  trait_impls.rs  type_dependencies.rs
src/upstream_patch/: CROSS_CRATE_PROTOTYPE.md  dead_fn_elim.rs  rustc_other_files.patch
src/upstream_patch/cargo/: MINIMAL_CARGO_SINGLEPASS.md
