[package]
name = "cargo-slicer"
version = "1.0.0"
edition = "2021"
default-run = "cargo-slicer"

[workspace]
exclude = ["sliced_crates", "sliced_*", "crates_to_slice", "arrayvec-sliced", "test_sliced"]

[features]
default = ["loc-measurement"]
# LOC measurement with tokei (adds ~100 transitive deps, slower builds)
# Disable with: cargo build --no-default-features
loc-measurement = ["dep:tokei"]
# SCIP-based analysis for old slicer (adds ~25 deps)
# Only needed for --ra-deps mode and debugging SCIP output
scip-analysis = ["dep:scip", "dep:protobuf"]

[dependencies]
rayon = "1.8"
#rustc-hash = "1.1"
once_cell = "1.18"
#parking_lot = "0.12"  # Faster mutex for single-threaded hot paths
regex = "1"           # For scanning code content for prototype references
memchr = "2"          # Fast byte search for key parsing
aho-corasick = "1.1"  # Fast multi-pattern matching for std import detection
#mimalloc = { version = "0.1", default-features = false }  # Fast allocator for multi-threaded
serde = { version = "1.0", features = ["derive"] }  # For cross-file dependency manifest
serde_json = "1.0"    # JSON output for dependency manifest
glob = "0.3"          # For finding PU files in cross-file optimization
#chrono = "0.4"        # For timestamp formatting in benchmark_modes
#rand = "0.8"          # For shuffling in test_batch sampling
syn = { version = "2.0", features = ["full", "parsing", "visit"] }  # For Rust source parsing in cargo-slicer
quote = "1.0"         # For Rust code generation in cargo-slicer
prettyplease = "0.2"  # For formatting generated Rust code
proc-macro2 = { version = "1.0", features = ["span-locations"] }  # Token handling with source locations
#tokio = { version = "1.48", features = ["full"] }

# Cargo manifest parsing and metadata
#cargo_toml = "0.20"   # Proper Cargo.toml parsing with serde
#cargo_metadata = "0.18"  # Dependency graph from cargo metadata

# SCIP index parsing for rust-analyzer batch mode (optional, ~25 deps)
scip = { version = "0.6", optional = true }
protobuf = { version = "3.7", optional = true }

# LOC measurement (optional, heavy dependency ~100 transitive deps)
tokei = { version = "12.1", optional = true }

# Progress bar for slicing operations
indicatif = "0.17"
ctrlc = "3.4"         # For graceful interruption handling

# Incremental caching
sha2 = "0.10"         # For content hashing in cache
hex = "0.4"           # For encoding hashes

# Watch mode (file system monitoring)
notify = "6.1"        # For watching source file changes

[build-dependencies]
cc = "1.0"

[profile.release]
debug = true
lto = "thin"  # Thin LTO for better optimization (avoid "fat" due to C code segfaults)
codegen-units = 1  # Better optimization with single codegen unit
opt-level = 3      # Maximum optimization
panic = "abort"
split-debuginfo = "off"
incremental = true  # Disable incremental for full optimization

[profile.dev]
debug = true
opt-level = 2         # Good runtime performance without max optimization overhead
codegen-units = 16
incremental = true
# Cranelift backend for faster dev builds (requires nightly)
# Install with: rustup component add rustc-codegen-cranelift-preview --toolchain nightly
# codegen-backend = "cranelift"

[profile.test]
debug = true

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "slicer_benchmarks"
harness = false
